Fixed img's added hover effects

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Blog</title>
@@ -7,6 +8,7 @@
     <script src="https://kit.fontawesome.com/6b8851dce6.js" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 </head>
+
 <body>
     <div class="wrapper">
         <header class="header">
@@ -41,31 +43,34 @@
                         <div class="categories__item">
                             <div class="categories__itemColumn">
                                 <div class="categories__itemImageContainer">
-                                    <img class="categories__itemImage" src="/img/categories/01.png" alt="Ooops!">
+                                    <img class="categories__itemImage" src="img/categories/01.png" alt="Ooops!">
                                 </div>
-                                    <div class="categories__itemTitle title">PROFESIONALS</div>
-                                    <div class="categories__underline underline"></div>
-                                    <div class="categories__itemDescription description">Lorem ipsum dolor sit amet consectetur elit.</div>
+                                <div class="categories__itemTitle title">PROFESIONALS</div>
+                                <div class="categories__underline underline"></div>
+                                <div class="categories__itemDescription description">Lorem ipsum dolor sit amet
+                                    consectetur elit.</div>
                             </div>
                         </div>
                         <div class="categories__item">
                             <div class="categories__itemColumn">
                                 <div class="categories__itemImageContainer">
-                                    <img class="categories__itemImage" src="/img/categories/02.png" alt="Ooops!">
+                                    <img class="categories__itemImage" src="img/categories/02.png" alt="Ooops!">
                                 </div>
                                 <div class="categories__itemTitle title">AMATEURS</div>
                                 <div class="categories__underline underline"></div>
-                                <div class="categories__itemDescription description">Lorem ipsum dolor sit amet consectetur elit.</div>
+                                <div class="categories__itemDescription description">Lorem ipsum dolor sit amet
+                                    consectetur elit.</div>
                             </div>
                         </div>
                         <div class="categories__item">
                             <div class="categories__itemColumn">
                                 <div class="categories__itemImageContainer">
-                                    <img class="categories__itemImage" src="/img/categories/03.png" alt="Ooops!">
+                                    <img class="categories__itemImage" src="img/categories/03.png" alt="Ooops!">
                                 </div>
                                 <div class="categories__itemTitle title">FOR EVERYONE</div>
                                 <div class="categories__underline underline"></div>
-                                <div class="categories__itemDescription description">Lorem ipsum dolor sit amet consectetur elit.</div>
+                                <div class="categories__itemDescription description">Lorem ipsum dolor sit amet
+                                    consectetur elit.</div>
                             </div>
                         </div>
                     </div>
@@ -73,44 +78,51 @@
             </section>
             <section class="articles">
                 <div class="content__body">
-                   <div class="articles__row">
-                       <div class="articles__item">
-                           <div class="articles__itemColumn">
-                               <div class="articles__itemImageContainer">
-                                   <img class="articles__itemImage" src="/img/articles/01.png" alt="Ooops!">
-                               </div>
-                               <div class="articles__itemTitle title">Responsive email template</div>
-                               <div class="articles__underline underline"></div>
-                               <div class="articles__itemDescription description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec interdum mollis</div>
-                               <div class="articles__rmbWrapper">
-                                   <a href="#" class="articles__rmb button rmb">Read more</a>
-                               </div>
-                           </div>
-                       </div>
-                       <div class="articles__item">
-                           <div class="articles__itemColumn">
-                               <div class="articles__itemImageContainer">
-                                   <img class="articles__itemImage" src="/img/articles/02.png" alt="Ooops!">
-                               </div>
-                               <div class="articles__itemTitle title">Fully compatible template</div>
-                               <div class="articles__underline underline"></div>
-                               <div class="articles__itemDescription description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec interdum mollis</div>
-                               <div class="articles__rmbWrapper">
-                                   <a href="#" class="articles__rmb button rmb">Read more</a>
-                               </div>
-                           </div>
-                       </div>
-                   </div>
+                    <div class="articles__row">
+                        <div class="articles__item">
+                            <div class="articles__itemColumn">
+                                <div class="articles__itemImageContainer">
+                                    <img class="articles__itemImage" src="img/articles/01.png" alt="Ooops!">
+                                </div>
+                                <div class="articles__itemTitle title">Responsive email template</div>
+                                <div class="articles__underline underline"></div>
+                                <div class="articles__itemDescription description">Lorem ipsum dolor sit amet,
+                                    consectetur adipiscing elit. Donec interdum mollis</div>
+                                <div class="articles__rmbWrapper">
+                                    <a href="#" class="articles__rmb button rmb">Read more</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="articles__item">
+                            <div class="articles__itemColumn">
+                                <div class="articles__itemImageContainer">
+                                    <img class="articles__itemImage" src="img/articles/02.png" alt="Ooops!">
+                                </div>
+                                <div class="articles__itemTitle title">Fully compatible template</div>
+                                <div class="articles__underline underline"></div>
+                                <div class="articles__itemDescription description">Lorem ipsum dolor sit amet,
+                                    consectetur adipiscing elit. Donec interdum mollis</div>
+                                <div class="articles__rmbWrapper">
+                                    <a href="#" class="articles__rmb button rmb">Read more</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </section>
             <section class="support">
                 <div class="content__body">
                     <div class="support__item">
                         <div class="support__itemColumn">
-                            <div class="titleBox"><div class="support__title title"><i class="far fa-life-ring support__icon"></i>Fully Supported template</div></div>
+                            <div class="titleBox">
+                                <div class="support__title title"><i class="far fa-life-ring support__icon"></i>Fully
+                                    Supported template</div>
+                            </div>
                             <div class="support__underline underline"></div>
-                            <div class="support__description description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse malesuada sodales risus, a adip
-                                iscing lorem commodo vitae. Ut semper semper lacus. Suspendisse convallis vel tellus at consectetur. Aenean risus arcu</div>
+                            <div class="support__description description">Lorem ipsum dolor sit amet, consectetur
+                                adipiscing elit. Suspendisse malesuada sodales risus, a adip
+                                iscing lorem commodo vitae. Ut semper semper lacus. Suspendisse convallis vel tellus at
+                                consectetur. Aenean risus arcu</div>
                             <div class="support__rmbWrapper">
                                 <a href="#" class="rmb support__rmb button ">Read more</a>
                             </div>
@@ -124,34 +136,37 @@
                         <div class="benefits__item">
                             <div class="benefits__itemColumn">
                                 <div class="benefits__itemImageContainer">
-                                    <img class="benefits__itemImage" src="/img/benefits/01.png" alt="Ooops!">
+                                    <img class="benefits__itemImage" src="img/benefits/01.png" alt="Ooops!">
                                 </div>
                                 <div class="benefits__itemTitle title">FULLY Layered PSD</div>
                                 <div class="benefits__underline underline"></div>
-                                <div class="benefits__itemDescription description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
-                                <a href="#" class="benefits__checkButton">Check this out  ></a>
+                                <div class="benefits__itemDescription description">Lorem ipsum dolor sit amet,
+                                    consectetur adipiscing elit.</div>
+                                <a href="#" class="benefits__checkButton">Check this out ></a>
                             </div>
                         </div>
                         <div class="benefits__item">
                             <div class="benefits__itemColumn">
                                 <div class="benefits__itemImageContainer">
-                                    <img class="benefits__itemImage" src="/img/benefits/02.png" alt="Ooops!">
+                                    <img class="benefits__itemImage" src="img/benefits/02.png" alt="Ooops!">
                                 </div>
                                 <div class="benefits__itemTitle title">FUll Compatibility</div>
                                 <div class="benefits__underline underline"></div>
-                                <div class="benefits__itemDescription description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
-                                <a href="#" class="benefits__checkButton">Check this out  ></a>
+                                <div class="benefits__itemDescription description">Lorem ipsum dolor sit amet,
+                                    consectetur adipiscing elit.</div>
+                                <a href="#" class="benefits__checkButton">Check this out ></a>
                             </div>
                         </div>
                         <div class="benefits__item">
                             <div class="benefits__itemColumn">
                                 <div class="benefits__itemImageContainer">
-                                    <img class="benefits__itemImage" src="/img/benefits/03.png" alt="Ooops!">
+                                    <img class="benefits__itemImage" src="img/benefits/03.png" alt="Ooops!">
                                 </div>
                                 <div class="benefits__itemTitle title">very great modules</div>
                                 <div class="benefits__underline underline"></div>
-                                <div class="benefits__itemDescription description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
-                                <a href="#" class="benefits__checkButton">Check this out  ></a>
+                                <div class="benefits__itemDescription description">Lorem ipsum dolor sit amet,
+                                    consectetur adipiscing elit.</div>
+                                <a href="#" class="benefits__checkButton">Check this out ></a>
                             </div>
                         </div>
                     </div>
@@ -162,9 +177,11 @@
                     <div class="prompting__row">
                         <div class="prompting__item">
                             <div class="prompting__itemColumn">
-                                <div class="prompting__title title"><i class="fab fa-telegram-plane prompting__icon"></i>SEND IT NOW</div>
+                                <div class="prompting__title title"><i
+                                        class="fab fa-telegram-plane prompting__icon"></i>SEND IT NOW</div>
                                 <div class="prompting__underline underline"></div>
-                                <div class="prompting__description description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse malesuada sodales risus, a adipiscing lorem.</div>
+                                <div class="prompting__description description">Lorem ipsum dolor sit amet, consectetur
+                                    adipiscing elit. Suspendisse malesuada sodales risus, a adipiscing lorem.</div>
                                 <div class="prompting__rmbWrapper">
                                     <a href="#" class="rmb prompting__rmb button ">Read more</a>
                                 </div>
@@ -172,9 +189,11 @@
                         </div>
                         <div class="prompting__item">
                             <div class="prompting__itemColumn">
-                                <div class="prompting__title title"><i class="fas fa-pencil-alt prompting__icon"></i>VERY NICE TO SEE</div>
+                                <div class="prompting__title title"><i
+                                        class="fas fa-pencil-alt prompting__icon"></i>VERY NICE TO SEE</div>
                                 <div class="prompting__underline underline"></div>
-                                <div class="prompting__description description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse malesuada sodales risus, a adipiscing lorem.</div>
+                                <div class="prompting__description description">Lorem ipsum dolor sit amet, consectetur
+                                    adipiscing elit. Suspendisse malesuada sodales risus, a adipiscing lorem.</div>
                                 <div class="prompting__rmbWrapper">
                                     <a href="#" class="rmb prompting__rmb button ">Read more</a>
                                 </div>
@@ -193,7 +212,9 @@
                             <div class="forYou__itemColumn">
                                 <div class="forYou__title title">JUST FOR YOU ON THEMEFOREST</div>
                                 <div class="forYou__underline underline"></div>
-                                <div class="forYou__description description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec interdum mollis risus, in mattis erat convallis egestas.</div>
+                                <div class="forYou__description description">Lorem ipsum dolor sit amet, consectetur
+                                    adipiscing elit. Donec interdum mollis risus, in mattis erat convallis egestas.
+                                </div>
                                 <div class="forYou__rmbWrapper">
                                     <a href="#" class="rmb forYou__rmb button ">Read more</a>
                                 </div>
@@ -205,7 +226,8 @@
             <section class="partners">
                 <div class="content__body">
                     <div class="partners__column">
-                        <div class="title partners__title"><i class="far fa-star partners__icon"></i>this template was featured on</div>
+                        <div class="title partners__title"><i class="far fa-star partners__icon"></i>this template was
+                            featured on</div>
                         <div class="partners__underline underline"></div>
                     </div>
                     <div class="partners__row">
@@ -225,9 +247,12 @@
                     </div>
                     <div class="footer__socialMedias">
                         <div class="footer__socialMediasIcons">
-                            <a href="https://www.google.com"><i class="fab fa-google-plus-g footer__socialMediasIcons"></i></a>
-                            <a href="https://www.facebook.com"><i class="fab fa-facebook-f footer__socialMediasIcons"></i></a>
-                            <a href="https://www.twitter.com"><i class="fab fa-twitter footer__socialMediasIcons"></i></a>
+                            <a href="https://www.google.com"><i
+                                    class="fab fa-google-plus-g footer__socialMediasIcons"></i></a>
+                            <a href="https://www.facebook.com"><i
+                                    class="fab fa-facebook-f footer__socialMediasIcons"></i></a>
+                            <a href="https://www.twitter.com"><i
+                                    class="fab fa-twitter footer__socialMediasIcons"></i></a>
                         </div>
                     </div>
                 </div>
@@ -237,4 +262,5 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/main.js"></script>
 </body>
+
 </html>
